# rust-feeds

./: Cargo.toml  Procfile  README.md
atom/: CHANGELOG.md  LICENSE-MIT
atom/src/: author.rs  category.rs  entry.rs  generator.rs  lib.rs  person.rs  source.rs  utils.rs
feed-stream/: Cargo.toml
feed-stream/src/: entry.rs  lib.rs  parser.rs  str_buf_reader.rs
fever-api/: Cargo.toml  Spec.md
fever-api/src/: key.rs  lib.rs  request.rs  response.rs
migrations/20170326184316_create_item/: down.sql  up.sql
migrations/2018-09-03-001112_create_feed/: down.sql  up.sql
migrations/2018-09-22-183248_create_profile/: up.sql
migrations/2018-09-23-163722_create_read/: down.sql  up.sql
migrations/2018-09-23-201548_add_is_read/: down.sql  up.sql
migrations/2018-10-06-164912_create_group/: down.sql  up.sql
migrations/2018-11-11-173627_add_site_url/: down.sql  up.sql
migrations/2023-07-22-222256_add_author_fetched/: down.sql  up.sql
migrations/2023-08-05-223856_unique_url/: down.sql  up.sql
migrations/2023-08-05-225329_add_guid/: down.sql  up.sql
migrations/2023-08-06-011929_nullable_url/: down.sql  up.sql
rss/src/: lib.rs
src/: api.rs  author.rs  category.rs  config.rs  content.rs  contributor.rs  data.rs  entry.rs  error.rs  feed.rs  fetch.rs  generator.rs  greader_auth.rs  greader_handling.rs  handling.rs  item_identity.rs  lib.rs  link.rs  main.rs  parser.rs  prune.sql  schema.rs  serve.rs  source.rs  utils.rs
src/greader/: auth.rs  mod.rs  request.rs  response.rs  timestamp.rs
src/models/: feed.rs  group.rs  item.rs  mod.rs  profile.rs  read.rs
src/parse/: entry.rs  feed.rs  mod.rs
src/schema/: item.rs
