[package]
name = "feeds"
version = "0.0.0"
authors = ["Steven Sheldon"]
edition = "2018"

[dependencies]
bytes = "0.5"
chrono = "0.4"
clap = "2.32"
env_logger = "0.5"
fever-api = { path = "fever-api" }
futures = "0.3"
reqwest = "0.10"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["rt-threaded"] }
url = "2.0"

[dependencies.diesel]
version = "1.0"
default-features = false
features = [
  "postgres",
  "r2d2",
  "chrono",
]

[dependencies.atom_syndication]
git = "https://github.com/rust-syndication/atom"
default-features = false

[dependencies.rss]
git = "https://github.com/rust-syndication/rss"
default-features = false

[dependencies.warp]
git = "https://github.com/seanmonstar/warp"
default-features = false

[workspace]
