[package]
name = "feeds"
version = "0.0.0"
authors = ["Steven Sheldon"]
edition = "2018"

[dependencies]
atom_syndication = { version = "0.8", default-features = false }
bytes = "0.5"
chrono = "0.4"
clap = "2.32"
env_logger = "0.5"
fever-api = { path = "fever-api" }
futures = "0.3"
reqwest = "0.10"
rss = { version = "1.9", default-features = false }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["rt-threaded"] }
url = "2.0"
warp = { version = "0.2", default-features = false }

[dependencies.diesel]
version = "1.0"
default-features = false
features = [
  "postgres",
  "r2d2",
  "chrono",
]

[workspace]
