[package]
name = "feeds"
version = "0.0.0"
authors = ["Steven Sheldon"]
edition = "2018"

[dependencies]
atom_syndication = { version = "0.12", default-features = false }
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = "4.3"
env_logger = "0.10"
fever-api = { path = "fever-api" }
futures = "0.3"
reqwest = "0.11"
rss = { version = "2.0", default-features = false }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_html_form = "0.2"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
url = "2.0"
warp = { version = "0.3", default-features = false }

[dependencies.diesel]
version = "2.0"
default-features = false
features = [
  "postgres",
  "r2d2",
  "chrono",
]

[workspace]
